@@ -47,6 +47,11 @@ namespace MonoDevelop.Core
 			return Catalog.GetString (str);
 		}
 	
+		public static string GetString (string str, params object[] arguments)
+		{
+			return string.Format (Catalog.GetString (str), arguments);
+		}
+	
 		public static string GetPluralString (string singular,
 			    	 	              string plural,
 					              int n)
